--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
+.loginBtn {
+   display: flex;
+   justify-content: flex-end;
+   margin: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.loginBtn div {
+   margin-left: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.nav_section {
+   display: flex;
+   justify-content: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.menu_area {
+   display: flex;
+   justify-content: center;
 }
 
-.App-link {
-  color: #61dafb;
+.menu_list {
+   display: flex;
+   list-style-type: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.menu_list li {
+   padding: 10px;
+}
+
+.nav_search {
+   display: flex;
+   justify-content: flex-end;
+   margin-right: 20px;
+   margin-top: -45px;
+}
+
+.nav_search input {
+   justify-content: flex-end;
+   margin-left: 10px;
+   border: none;
+   border-bottom: 2px solid gray;
+   outline: none;
+   position: relative;
 }
