--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,16 @@
    outline: none;
    position: relative;
 }
+
+.product_img {
+   width: 300px;
+   margin-bottom: 5px;
+}
+
+.product_card {
+   margin-top: 30px;
+}
+
+.product_card:hover {
+   scale: 1.1;
+}
