--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,13 @@
-.loginBtn {
+.side_menu {
    display: flex;
    justify-content: flex-end;
    margin: 20px;
 }
 
-.loginBtn div {
+.side_menu .loginBtn {
    margin-left: 10px;
+   text-decoration: none;
+   color: black;
 }
 
 .nav_section {
