--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+/* NavBar */
 .side_menu {
    display: flex;
    justify-content: flex-end;
@@ -36,13 +37,17 @@
    margin-top: -45px;
 }
 
-.nav_search input {
+.nav_search .search_input {
    justify-content: flex-end;
    margin-left: 10px;
    border: none;
    border-bottom: 2px solid gray;
    outline: none;
    position: relative;
+}
+
+.search_input:focus {
+   outline: none;
 }
 
 .product_img {
@@ -56,4 +61,94 @@
 
 .product_card:hover {
    scale: 1.1;
+}
+
+/* LoginPage */
+.login_form1 {
+   justify-content: center;
+   display: flex;
+   align-items: center;
+}
+
+.login_form1 .login_form2 {
+   width: 500px;
+   height: auto;
+   /* border: 1px solid gray; */
+   /* border-radius: 10px; */
+   margin-top: 100px;
+}
+
+h2 {
+   padding: 40px;
+   justify-content: center;
+   align-items: center;
+   display: flex;
+}
+form {
+   margin-top: 50px;
+}
+
+.id {
+   margin-left: 50px;
+   margin-bottom: 40px;
+}
+
+.password {
+   margin-left: 50px;
+   /* margin-bottom: 40px; */
+}
+
+.id label {
+   margin-right: 35px;
+   font-size: larger;
+}
+
+.password label {
+   margin-right: 20px;
+   font-size: larger;
+}
+
+.login_form1 .login_form2 form input {
+   width: 300px;
+   height: 50px;
+   border: none;
+   border-bottom: 1px solid;
+}
+
+Input:focus {
+   outline: none;
+}
+
+.find_idpassword {
+   display: flex;
+   justify-content: flex-end;
+   margin-right: 70px;
+   margin-top: 20px;
+}
+
+.find_idpassword .find_id {
+   /* text-decoration: none; */
+   margin-right: 10px;
+   color: gray;
+}
+
+.find_idpassword .find_password {
+   /* text-decoration: none; */
+   margin-left: 10px;
+   color: gray;
+}
+
+.login_btn {
+   display: flex;
+   justify-content: center;
+   margin-top: 40px;
+}
+
+.btn {
+   margin-top: 50px;
+   width: 150px;
+   height: 50px;
+   border-radius: 5px;
+   background-color: rgb(187, 187, 187);
+   border: 1px solid black;
 }
